<resources>
    <string name="app_name">QuizGame</string>
    <string name="username">Enter name</string>
    <string name="play">Play</string>
    <string name="high_scores">High Scores</string>
    <string name="settings">Settings</string>
    <string name="done">Done</string>
    <string name="select_difficulty">Select Difficulty</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="back">Back</string>
    <string name="title_activity_memory_questions">MemoryQuestions</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="play_again">Play Again</string>
    <string name="twitter_share">Twitter Share</string>
    <string name="go">Go!</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="add_high_score">Add highscore</string>
    <string name="instructions">Instructions</string>
</resources>
