<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/landing"
    android:orientation="vertical"
    tools:context=".Landing">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="500dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="clickInstructions"
            android:text="@string/instructions" />

        <Button
            android:id="@+id/play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="clickPlay"
            android:text="@string/play" />

        <Button
            android:id="@+id/scores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="clickScores"
            android:text="@string/high_scores" />


    </LinearLayout>

</RelativeLayout>
