<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MemoryQuiz">

    <LinearLayout
        android:id="@+id/gameOver"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/score">


        <TextView
            android:id="@+id/displayScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:textAlignment="center"
            android:textSize="50sp" />


        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="50sp"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/playAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="clickAgain"
            android:text="@string/play_again" />

        <Button
            android:id="@+id/highScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_high_score"
            android:onClick="clickAddScore"/>

        <Button
            android:id="@+id/shareTwitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="clickShare"
            android:text="@string/twitter_share" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/answers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/displayQuestion"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:textSize="50sp" />


        <Button
            android:id="@+id/choice1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="clickChoice1" />

        <Button
            android:id="@+id/choice2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="clickChoice2" />

        <Button
            android:id="@+id/choice3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="clickChoice3" />

        <Button
            android:id="@+id/choice4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="clickChoice4" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/questions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/go"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="clickGo"
            android:text="@string/go" />
    </LinearLayout>
</RelativeLayout>